# musikalyze

./: LICENSE  METADATA.md  README.md  pyproject.toml
src/musikalize/: __init__.py  analysis.py  analysis_ops.py  audio_io.py  batch.py  config.py  exceptions.py  export_ffmpeg.py  lazy_engine.py  process.py  tagging.py  templates.py
src/musikalyze/: __init__.py  audio_io.py  batch.py  config.py  exceptions.py  export_ffmpeg.py  lazy_engine.py  process.py  tagging.py
tests/: test_genre.py  test_templates.py
