[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musikalize"
version = "0.3.0"
description = "Analyse audio (Essentia/TF), tags et export multi-formats"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "musikalize contributors" }]
dependencies = [
    "mutagen>=1.47",
    "numpy>=1.24",
]

[project.optional-dependencies]
tensorflow = [
    "essentia-tensorflow",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
musikalize = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
